feat: 코드 정리 및 주석 추가